--- a/_pages/events/mtp/4.md
+++ b/_pages/events/mtp/4.md
@@ -49,26 +49,6 @@ permalink: /events/mtp/4/
   margin-bottom: 10px;
 }
 
-/* Speaker Grid */
-.speaker-card {
-  text-decoration: none;
-  text-align: center;
-  width: 220px;
-}
-.speaker-card img {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-bottom: 8px;
-}
-.speaker-card span {
-  display: block;
-  font-weight: bold;
-  color: #333;
-  font-size: 14px;
-}
-
 /* Schedule Table */
 .schedule-table {
   width: 100%;
@@ -98,37 +78,30 @@ permalink: /events/mtp/4/
 # Fourth Master Trainer Program  
 **Learning, Vision and Motion Planning**
 
-<div style="text-align: center; width: 100%; margin: 20px auto;">
-  <img src="/images/events/rrc-event-banner.png" alt="RRC MTP Banner" 
-       style="width: 100%; max-width: 1000px; height: auto; max-height: 450px; object-fit: contain; border-radius: 8px;">
-</div>
-
 - **Dates**: 3rd – 7th March 2025  
 - **Venue**: Saranga Hall 119, Nilgiri Building, IIIT Hyderabad Campus, Gachibowli, Hyderabad  
-- **Status**: Event concluded — registrations are closed. :contentReference[oaicite:13]{index=13}  
+- **Status**: Event concluded — registrations are closed.
 
 ---
 
 ### <a id="about-the-program"></a>About the Program
 
-The **Fourth Master Trainer Program** for the Technology Specific Work Theme **“Allied UAS Technologies”** focused on **Learning, Vision, and Motion Planning** and was scheduled from **3rd to 7th March 2025** at IIIT Hyderabad.  
+The Fourth Master Trainer Program for the Technology Specific Work Theme “Allied UAS Technologies” with focus on Learning, Vision and Motion Planning was scheduled from 3rd to 7th March 2025 at IIIT Hyderabad.
 
-The five-day program covered foundations of **computer vision, scientific machine learning, statistical issues in AI/ML, reinforcement learning, motion planning, and applications to UAS**. Tutorial sessions covered implementation aspects of the different methods. :contentReference[oaicite:14]{index=14}  
+The five-day program covered foundations of computer vision, scientific machine learning, statistical issues in AI/ML, reinforcement learning, motion planning and applications to UAS. Tutorial sessions covered the implementation aspects of the different methods.
 
 ---
 
 ### <a id="program-topics"></a>Program Topics
 
-Key topics covered in the program: :contentReference[oaicite:15]{index=15}  
+Key topics covered in the program:
 
 - Robot Motion Planning  
-- Introduction to Image Processing  
-- Basics of Reinforcement Learning (RL) and advanced RL lectures  
-- Computer Vision  
-- Adaptive control using artificial time delay  
-- Adaptive control for robots with underactuated and switched dynamics  
+- Image Processing and Computer Vision  
+- Basics and advanced topics in Reinforcement Learning  
 - Scientific Machine Learning  
 - Non-parametric statistics for AI/ML  
+- Adaptive control for robots and drones  
 - MAVLink – Drone Communication Protocol  
 - Tutorial sessions on implementation and applications  
 
@@ -291,75 +264,22 @@ Key topics covered in the program: :contentReference[oaicite:15]{index=15}
   </tr>
 </table>
 
-:contentReference[oaicite:16]{index=16}  
-
 ---
 
 ### <a id="speakers"></a>Speakers
 
-<div style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center; margin: 30px 0;">
-
-  <a href="https://ravika.github.io/" class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Dr Ravi Kiran Sarvadevabhatla</span>
-  </a>
-
-  <a href="https://sites.google.com/view/harikumar-kandath/home/" class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Dr Harikumar Kandath</span>
-  </a>
-
-  <a href="https://madhavak-iiith.github.io/" class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Prof Madhava Krishna</span>
-  </a>
-
-  <a href="https://www.iiit.ac.in/faculty/antony-thomas/" class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Dr Antony Thomas</span>
-  </a>
-
-  <a href="https://sites.google.com/view/spandanroy/" class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Dr Spandan Roy</span>
-  </a>
-
-  <a href="https://sites.google.com/view/tejaspbodas/" class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Dr Tejas Bodas</span>
-  </a>
-
-  <a href="https://faculty.iiit.ac.in/~vinod.pk/" class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Dr Vinod P K</span>
-  </a>
-
-  <a href="https://www.mandalab.org/" class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Dr Vishnu Sreekumar</span>
-  </a>
-
-  <a href="https://openreview.net/profile?id=~Shikhar_Saxena1" class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Mr. Shikhar Saxena</span>
-  </a>
-
-  <a href="https://ieeexplore.ieee.org/author/37090023637" class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Mr. Munjaal Bhatt</span>
-  </a>
-
-  <a href="https://ieeexplore.ieee.org/author/361161514324036" class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Mr. Aakash Maniar</span>
-  </a>
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Mr. Akshith Reddy</span>
-  </div>
-
-</div>
+- Dr Ravi Kiran Sarvadevabhatla  
+- Dr Harikumar Kandath  
+- Prof Madhava Krishna  
+- Dr Antony Thomas  
+- Dr Spandan Roy  
+- Dr Tejas Bodas  
+- Dr Vinod P K  
+- Dr Vishnu Sreekumar  
+- Mr. Shikhar Saxena  
+- Mr. Munjaal Bhatt  
+- Mr. Aakash Maniar  
+- Mr. M Akshith Reddy  
 
 ---
 
