Revise event details for Third Master Trainer Program
Updated event details for the Third Master Trainer Program, including program topics, schedule, and speaker information.

--- a/_pages/events/mtp/3.md
+++ b/_pages/events/mtp/3.md
@@ -49,26 +49,6 @@ permalink: /events/mtp/3/
   margin-bottom: 10px;
 }
 
-/* Speaker Grid */
-.speaker-card {
-  text-decoration: none;
-  text-align: center;
-  width: 180px;
-}
-.speaker-card img {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-bottom: 8px;
-}
-.speaker-card span {
-  display: block;
-  font-weight: bold;
-  color: #333;
-  font-size: 14px;
-}
-
 /* Schedule Table */
 .schedule-table {
   width: 100%;
@@ -98,36 +78,32 @@ permalink: /events/mtp/3/
 # Third Master Trainer Program  
 **Allied UAS Technologies**
 
-<div style="text-align: center; width: 100%; margin: 20px auto;">
-  <img src="/images/events/rrc-event-banner.png" alt="RRC MTP Banner" 
-       style="width: 100%; max-width: 1000px; height: auto; max-height: 450px; object-fit: contain; border-radius: 8px;">
-</div>
-
 - **Dates**: 11th – 15th March 2024  
 - **Venue**: IIIT Hyderabad Campus  
-- **Status**: Event concluded — registrations are closed. :contentReference[oaicite:9]{index=9}  
+- **Status**: Event concluded — registrations are closed.
 
 ---
 
 ### <a id="about-the-program"></a>About the Program
 
-IIIT Hyderabad is identified as one of the Resource Centers (RC) for the MeitY approved project entitled **“Capacity building for human resource development in Unmanned Aircraft System (Drone and related Technology)”**.  
+IIIT Hyderabad is identified as one of the Resource Centers (RC) for the MeitY approved project entitled “Capacity building for human resource development in Unmanned Aircraft System (Drone and related Technology)”.
 
-As a part of this project, IIIT Hyderabad organized the **Third Master Trainer Program (MTP)** for the Technology Specific Work Theme **"Allied UAS Technologies"** for five days from **11/03/2024 to 15/03/2024**. :contentReference[oaicite:10]{index=10}  
+As a part of this project, IIIT Hyderabad organized the Third Master Trainer Program (MTP) for the Technology Specific Work Theme "Allied UAS Technologies" for five days from 11/03/2024 to 15/03/2024.
 
-The program included sessions on simulators for drones, flight controllers, navigation guidance and control (NGC) for UAVs, image processing, and planning.
+The program included sessions on simulators for drones (ROS, MUJOCO), flight controllers, Navigation-Guidance and Control for UAV, image processing, and planning.
 
 ---
 
 ### <a id="program-topics"></a>Program Topics
 
-The five-day program covered: :contentReference[oaicite:11]{index=11}  
+The five-day program covered:
 
 - Image Processing (multiple sessions)  
 - Ardupilot  
-- MUJOCO-based drone simulation (Mujoco I–VIII)  
-- Model Predictive Control (MPC) / Path Planning  
-- ROS and URDF-ROS  
+- Mujoco-based drone simulation (Mujoco I–VIII)  
+- MPC / Path Planning  
+- ROS  
+- URDF-ROS  
 - Fixed Wing UAV  
 - Kinematics  
 
@@ -178,7 +154,7 @@ The five-day program covered: :contentReference[oaicite:11]{index=11}
     <td>Nilgiri 119</td>
     <td>9:30 AM – 11:00 AM</td>
     <td>Ardupilot I</td>
-    <td>Munjaal &amp; Aakash</td>
+    <td>Munjaal & Aakash</td>
   </tr>
   <tr>
     <td>12/03/2024 (Tue)</td>
@@ -207,14 +183,14 @@ The five-day program covered: :contentReference[oaicite:11]{index=11}
     <td>KRB</td>
     <td>9:30 AM – 11:00 AM</td>
     <td>Ardupilot II</td>
-    <td>Munjaal &amp; Aakash</td>
+    <td>Munjaal & Aakash</td>
   </tr>
   <tr>
     <td>13/03/2024 (Wed)</td>
     <td>KRB</td>
     <td>11:30 AM – 1:00 PM</td>
     <td>Ardupilot III</td>
-    <td>Munjaal &amp; Aakash</td>
+    <td>Munjaal & Aakash</td>
   </tr>
   <tr>
     <td>13/03/2024 (Wed)</td>
@@ -290,60 +266,19 @@ The five-day program covered: :contentReference[oaicite:11]{index=11}
   </tr>
 </table>
 
-:contentReference[oaicite:12]{index=12}  
-
 ---
 
 ### <a id="speakers"></a>Speakers
 
-<div style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center; margin: 30px 0;">
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Ravi</span>
-  </div>
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Ananth</span>
-  </div>
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Munjaal</span>
-  </div>
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Aakash</span>
-  </div>
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>BKV</span>
-  </div>
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Kaustab</span>
-  </div>
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Vidya</span>
-  </div>
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Avijit Ashe</span>
-  </div>
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Priyansh</span>
-  </div>
-
-</div>
+- Ravi  
+- Ananth  
+- Munjaal  
+- Aakash  
+- BKV  
+- Kaustab  
+- Vidya  
+- Avijit Ashe  
+- Priyansh  
 
 ---
 
