Update event details for UAV workshop

--- a/_pages/events/mtp/2.md
+++ b/_pages/events/mtp/2.md
@@ -49,26 +49,6 @@ permalink: /events/mtp/2/
   margin-bottom: 10px;
 }
 
-/* Speaker Grid */
-.speaker-card {
-  text-decoration: none;
-  text-align: center;
-  width: 180px;
-}
-.speaker-card img {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-bottom: 8px;
-}
-.speaker-card span {
-  display: block;
-  font-weight: bold;
-  color: #333;
-  font-size: 14px;
-}
-
 /* Schedule Table */
 .schedule-table {
   width: 100%;
@@ -98,27 +78,22 @@ permalink: /events/mtp/2/
 # Second Two-Day Workshop  
 **Systems and Intelligence for UAV**
 
-<div style="text-align: center; width: 100%; margin: 20px auto;">
-  <img src="/images/events/rrc-event-banner.png" alt="RRC Workshop Banner" 
-       style="width: 100%; max-width: 1000px; height: auto; max-height: 450px; object-fit: contain; border-radius: 8px;">
-</div>
-
 - **Dates**: 18th – 19th December 2024  
 - **Time**: 10:00 AM – 5:00 PM  
 - **Venue**: IIIT Hyderabad Campus  
-- **Status**: Event concluded — registrations are closed. :contentReference[oaicite:5]{index=5}  
+- **Status**: Event concluded — registrations are closed.
 
 ---
 
 ### <a id="about-the-program"></a>About the Program
 
-The **Second Two-Day Workshop on Systems and Intelligence for UAV** focused on recent advances in **Vision Transformers, SLAM, Computer Vision applications, and Motion Planning** for UAV systems. The workshop combined theoretical talks with discussions on practical applications in UAV perception and control. :contentReference[oaicite:6]{index=6}  
+The Second Two-Day Workshop on Systems and Intelligence for UAV focused on recent advances in Vision Transformers, SLAM, Computer Vision applications, and Motion Planning for UAV systems.
 
 ---
 
 ### <a id="program-topics"></a>Program Topics
 
-The two-day workshop covered: :contentReference[oaicite:7]{index=7}  
+The two-day workshop covered:
 
 - Transformers and Vision Transformers  
 - Neural Networks – MLP and CNN  
@@ -182,40 +157,15 @@ The two-day workshop covered: :contentReference[oaicite:7]{index=7}
   </tr>
 </table>
 
-:contentReference[oaicite:8]{index=8}  
-
 ---
 
 ### <a id="speakers"></a>Speakers
 
-<div style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center; margin: 30px 0;">
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Dr Makarand Tapaswi</span>
-  </div>
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Dr Ravi Kiran S</span>
-  </div>
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Prof Madhava Krishna</span>
-  </div>
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Dr Nagamanikandan G</span>
-  </div>
-
-  <div class="speaker-card">
-    <img src="/images/icons/speaker.png" alt="Speaker icon">
-    <span>Dr Arun Kumar Singh</span>
-  </div>
-
-</div>
+- Dr Makarand Tapaswi  
+- Dr Ravi Kiran S  
+- Prof Madhava Krishna  
+- Dr Nagamanikandan G  
+- Dr Arun Kumar Singh  
 
 ---
 
