Refactor event details for UAV workshop page

--- a/_pages/events/mtp/1.md
+++ b/_pages/events/mtp/1.md
@@ -49,26 +49,6 @@ permalink: /events/mtp/1/
   margin-bottom: 10px;
 }
 
-/* Speaker Grid */
-.speaker-card {
-  text-decoration: none;
-  text-align: center;
-  width: 180px;
-}
-.speaker-card img {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-bottom: 8px;
-}
-.speaker-card span {
-  display: block;
-  font-weight: bold;
-  color: #333;
-  font-size: 14px;
-}
-
 /* Schedule Table */
 .schedule-table {
   width: 100%;
@@ -89,7 +69,6 @@ permalink: /events/mtp/1/
   <a href="#about-the-program" style="margin: 0 15px; text-decoration: none; color: #007bff;">About</a>
   <a href="#program-topics" style="margin: 0 15px; text-decoration: none; color: #007bff;">Topics</a>
   <a href="#schedule" style="margin: 0 15px; text-decoration: none; color: #007bff;">Schedule</a>
-  <a href="#speakers" style="margin: 0 15px; text-decoration: none; color: #007bff;">Speakers</a>
   <a href="#registration" style="margin: 0 15px; text-decoration: none; color: #007bff;">Registration</a>
   <a href="#registration" class="nav-cta disabled">Registrations Closed</a>
   <a href="https://robotics.iiit.ac.in/" style="margin: 0 15px; text-decoration: none; color: #007bff;">RRC Homepage</a>
@@ -98,28 +77,21 @@ permalink: /events/mtp/1/
 # 1st National Workshop  
 **Systems and Intelligence for UAV**
 
-<div style="text-align: center; width: 100%; margin: 20px auto;">
-  <img src="/images/events/rrc-event-banner.png" alt="RRC Workshop Banner" 
-       style="width: 100%; max-width: 1000px; height: auto; max-height: 450px; object-fit: contain; border-radius: 8px;">
-</div>
-
 - **Dates**: 3rd – 4th November 2023  
 - **Venue**: IIIT Hyderabad Campus  
-- **Status**: Event concluded — registrations are closed. :contentReference[oaicite:0]{index=0}  
+- **Status**: Event concluded — registrations are closed.
 
 ---
 
 ### <a id="about-the-program"></a>About the Program
 
-A **National 2-day workshop** on **Systems and Intelligence for UAV** was conducted on **3rd and 4th November 2023**. The workshop focused on system design, motion planning, security, and control aspects of UAVs, bringing together experts from academia and industry. :contentReference[oaicite:1]{index=1}  
-
-The program covered a range of topics from passenger drone system design to intelligent control for payload-suspended quadrotors.
+A National 2-day workshop on Systems and Intelligence for UAV was conducted on 3rd and 4th November 2023. The workshop focused on system design, motion planning, security, and control aspects of UAVs, bringing together experts from academia and industry.
 
 ---
 
 ### <a id="program-topics"></a>Program Topics
 
-The workshop covered the following topics: :contentReference[oaicite:2]{index=2}  
+The workshop covered the following topics:
 
 - System design of passenger drone  
 - Arka Aerospace – Research to Product  
@@ -157,14 +129,6 @@ The workshop covered the following topics: :contentReference[oaicite:2]{index=2}
     </td>
   </tr>
 </table>
-
-*(Detailed session-wise timings were not specified in the source document.)* :contentReference[oaicite:3]{index=3}  
-
----
-
-### <a id="speakers"></a>Speakers
-
-Details of individual speakers for this workshop are not listed in the provided document. This section can be updated later with specific speaker names, if required. :contentReference[oaicite:4]{index=4}  
 
 ---
 
