--- a/_pages/events/mtp/5.md
+++ b/_pages/events/mtp/5.md
@@ -115,12 +115,17 @@ This event has concluded and registrations are now closed.
 
 Organized by **Robotics Research Center, IIIT Hyderabad**  
 **Funded by MeitY, Government of India**
-
-<div class='eu-header-row'>
+<div class="eu-header-row">
   <div class="col1">
-    ![MeitY Logo](/images/events/meity.png)
+    <img src="/images/events/meity.png"
+         alt="MeitY Logo"
+         style="max-width: 180px; height: auto;">
   </div>
+
   <div class="col1">
-    ![Swayaan Logo](/images/events/swayaan_logo.jpg)
+    <img src="/images/events/swayaan_logo.jpg"
+         alt="Swayaan Logo"
+         style="max-width: 180px; height: auto;">
   </div>
 </div>
+
