--- a/_pages/events/mtp/5.md
+++ b/_pages/events/mtp/5.md
@@ -115,17 +115,16 @@ This event has concluded and registrations are now closed.
 
 Organized by **Robotics Research Center, IIIT Hyderabad**  
 **Funded by MeitY, Government of India**
-<div class="eu-header-row">
-  <div class="col1">
-    <img src="/images/events/meity.png"
-         alt="MeitY Logo"
-         style="max-width: 180px; height: auto;">
-  </div>
 
-  <div class="col1">
-    <img src="/images/events/swayaan_logo.jpg"
-         alt="Swayaan Logo"
-         style="max-width: 180px; height: auto;">
-  </div>
+
+<div style="display:flex; justify-content:center; align-items:center; gap:40px; margin-top:30px; flex-wrap:wrap;">
+  <img src="/images/events/meity.png"
+       alt="MeitY Logo"
+       style="height:80px; width:auto;">
+
+  <img src="/images/events/swayaan_logo.jpg"
+       alt="Swayaan Logo"
+       style="height:80px; width:auto;">
 </div>
+
 
